--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "hab/picarecord",
+    "name": "hebis/picarecord",
     "description": "Object oriented interface to Pica+ records, fields, and subfields",
     "type": "library",
     "license": "GPL-3.0+",
